--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <li>Milk</li>
     <li>Bread</li>
     <li>Eggs</li>
+    <li>books</li>
+    <li>tomato</li>
+    <li>potao</li>
   </ul>
   
   <!-- Table -->
@@ -39,11 +42,11 @@
       <th>Age</th>
     </tr>
     <tr>
-      <td>Alice</td>
+      <td>Kiran</td>
       <td>25</td>
     </tr>
     <tr>
-      <td>Bob</td>
+      <td>Lijin</td>
       <td>30</td>
     </tr>
   </table>
