--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br><br>
   
   <!-- Image -->
-  <img src="https://via.placeholder.com/150" alt="Sample Image">
+  <img src="https://plus.unsplash.com/premium_photo-1753158245780-5f9dc0659e14?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D/150" alt="Sample Image">
   
   <br><br>
   
