--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Hello, World!</h1>
   
   <!-- Paragraph -->
-  <p>This is a simple paragraph in HTML. You can write text here.</p>
+  <p>This is a simple paragraph in HTML. You can write something here.</p>
   
   <!-- Link -->
   <a href="https://www.google.com" target="_blank">Visit Google</a>
